--- a/src/Eclipse.Web/Pages/Index.razor
+++ b/src/Eclipse.Web/Pages/Index.razor
@@ -6,59 +6,78 @@
 <div class="p-10 rounded border-2 m-4">
 
     <div class="grid grid-cols-2">
-        <div class="flex flex-col">
-            @foreach (var shipType in battle.Ships.GroupBy(x => x.Type))
+        <div class="flex flex-col space-y-4">
+            @foreach (var battleGroup in battle.Groups)
             {
-                <div class="flex justify-between items-center space-y-4">
-                    <div class="flex justify-between items-center space-x-2">
-                        @foreach (var ship in shipType)
+                <div class="grid grid-cols-3">
+                    <div class="flex items-center space-x-2">
+                        @foreach (var ship in battleGroup.Ships)
                         {
                             <ShipRenderer Ship="ship" Color="bg-blue-600" />
                         }
                     </div>
 
                     <div class="flex justify-between space-x-2">
-                        <button type="button" class="@Styles.PrimaryButton" @onclick="() => Shoot(shipType.Key)">
-                            Shoot
-                        </button>
-                        <button type="button" class="@Styles.PrimaryInlineButton" @onclick="() => Retreat(shipType.Key)">
-                            Retreat
-                        </button>
+
+                        @if (battle.ActiveGroup.Equals(battleGroup))
+                        {
+                            <button type="button" class="@Styles.PrimaryInlineButton" @onclick="async () => await Shoot(battleGroup)">
+                                Shoot
+                            </button>
+                            <button type="button" class="@Styles.SecondaryInlineButton" @onclick="() => Retreat(battleGroup)">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24"
+                             stroke-width="1.5" stroke="currentColor" fill="none"
+                             stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path d="M9 11l-4 4l4 4m-4 -4h11a4 4 0 0 0 0 -8h-1" />
+                                </svg>
+                            </button>
+                        }
+                    </div>
+                    <div class="flex space-x-2">
+                        @foreach (var diceResult in results[battleGroup.Index])
+                        {
+                            <Dice DiceResult="diceResult" />
+                        }
                     </div>
                 </div>
+
             }
 
         </div>
 
-        <div class="flex flex-col">
+        <div class="flex flex-col space-y-4">
 
-             @foreach (var shipType in battle.EnemyShips.GroupBy(x => x.Type))
+            @foreach (var enemyGroup in battle.EnemyGroups)
             {
-                <div class="flex justify-between items-center">
-                    <div class="flex justify-between items-center space-x-2">
-                        @foreach (var ship in shipType)
+                <div class="grid grid-cols-2">
+                    <div class="flex items-center space-x-2">
+                        @foreach (var ship in enemyGroup.Ships)
                         {
                             <ShipRenderer Ship="ship" Color="bg-red-600" />
                         }
                     </div>
+
+                    <div class="flex space-x-2">
+                        @foreach (var diceResult in enemyResults[enemyGroup.Index])
+                        {
+                            <Dice DiceResult="diceResult" />
+                        }
+                    </div>
                 </div>
+
+
             }
         </div>
     </div>
-</div>
-
-<div class="bg-green-200">
-    @foreach (var diceResult in lastResult)
-    {
-        <Dice DiceResult="diceResult" />
-    }
 </div>
 
 
 @code {
     private Battle battle;
 
-    private List<DiceResult> lastResult = new List<DiceResult>();
+    private List<List<DiceResult>> results;
+    private List<List<DiceResult>> enemyResults;
 
     protected override void OnInitialized()
     {
@@ -66,23 +85,52 @@
              new List<Ship>() { TerranShips.Interceptor, TerranShips.Interceptor, TerranShips.Cruiser },
              new List<Ship>() { PlantaShips.Interceptor, PlantaShips.Dreadnought, PlantaShips.Dreadnought }
          );
+
+        results = battle.Groups.Select(x => new List<DiceResult>()).ToList();
+        enemyResults = battle.EnemyGroups.Select(x => new List<DiceResult>()).ToList();
     }
 
-    private void Shoot(ShipType type)
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        lastResult = new List<DiceResult>();
-        foreach(var ship in battle.Ships.Where(x => x.Type == type))
+        if (battle.IsEnemiesTurn && firstRender)
         {
-            var target = battle.GetEnemyShip();
-            if (target is not null)
-            {
-                lastResult.AddRange(shipAttack.MakeAttack(ship, target));
-            }
+            await Play();
         }
     }
 
-    private void Retreat(ShipType type)
+    private async Task Shoot(BattleGroup group)
     {
-        
+        var attackResults = shipAttack.MakeAttack(group, battle.GetEnemyFirstActiveShip).ToList();
+        var selectedGroup = battle.Groups.First(x => x.Index == group.Index);
+        results[group.Index] = attackResults.ToList();
+
+        battle.NextTurn();
+
+        if (battle.IsEnemiesTurn)
+        {
+            await Play();
+        }
+    }
+
+    private void Retreat(BattleGroup group)
+    {
+
+    }
+
+    private async Task Play()
+    {
+        while (battle.IsEnemiesTurn)
+        {
+            var activeGroup = battle.ActiveGroup;
+            if (activeGroup is not null)
+            {
+                var attackResults = shipAttack.MakeAttack(activeGroup, battle.GetPlayersWeakestShip).ToList();
+                var selectedGroup = battle.EnemyGroups.First(x => x.Index == activeGroup.Index);
+                enemyResults[selectedGroup.Index] = attackResults.ToList();
+            }
+
+            await Task.Delay(2000);
+            //Sleep
+        }
     }
 }
