--- a/src/Eclipse.Web/Components/Ships/Cruiser.razor
+++ b/src/Eclipse.Web/Components/Ships/Cruiser.razor
@@ -6,5 +6,17 @@
 
 @code {
     [Parameter]
-    public string Color { get; set; }
+    public SpecieColor Color { get; set; }
+
+    public string GetColor()
+    {
+        if (Color == SpecieColor.Yellow) return "bg-yellow-200 border-yellow-500";
+        if (Color == SpecieColor.Green) return "bg-green-500 border-green-700";
+        if (Color == SpecieColor.Blue) return "bg-blue-200 border-blue-500";
+        if (Color == SpecieColor.Black) return "bg-gray-600 border-gray-900 text-white";
+        if (Color == SpecieColor.Red) return "bg-red-300 border-red-500";
+        if (Color == SpecieColor.White) return "bg-gray-50 border-gray-200";
+        if (Color == SpecieColor.Gray) return "bg-gray-300 border-gray-500";
+        return "bg-blue-100";
+    }
 }
