--- a/src/Eclipse.Web/Components/Ships/Cruiser.razor
+++ b/src/Eclipse.Web/Components/Ships/Cruiser.razor
@@ -1,22 +1,19 @@
-﻿
-<span class="w-6 h-3 @Color">
-    
-</span>
+﻿<button type="button" @onclick="async () => await OnShipClicked.InvokeAsync(Ship)" class="flex w-6 h-3 @Color">
 
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" stroke="none" fill="currentColor">
+        <path d="m439.15 453.06-141.98-69.06 141.99-69.06c7.9-3.95 11.11-13.56 7.15-21.46l-14.31-28.63c-3.95-7.9-13.56-11.11-21.47-7.16l-186.53 90.72-186.53-90.72c-7.9-3.95-17.51-.75-21.47 7.16l-14.31 28.63c-3.95 7.9-.75 17.51 7.15 21.46l141.99 69.06-141.98 69.06c-7.9 3.95-11.11 13.56-7.15 21.47l14.31 28.63c3.95 7.9 13.56 11.11 21.47 7.15l186.52-90.72 186.53 90.72c7.9 3.95 17.51.75 21.47-7.15l14.31-28.63c3.95-7.91.74-17.52-7.16-21.47zm-289.15-215.78-5.48 25.87c-2.67 12.62 5.42 24.85 16.45 24.85h126.08c11.03 0 19.12-12.23 16.45-24.85l-5.5-25.87c41.78-22.41 70-62.75 70-109.28 0-70.69-64.47-128-144-128s-144 57.31-144 128c0 46.53 28.22 86.87 70 109.28zm130-125.28c17.65 0 32 14.35 32 32s-14.35 32-32 32-32-14.35-32-32 14.35-32 32-32zm-112 0c17.65 0 32 14.35 32 32s-14.35 32-32 32-32-14.35-32-32 14.35-32 32-32z" />
+    </svg>
+
+</button>
 
 @code {
     [Parameter]
-    public SpecieColor Color { get; set; }
+    public string Color { get; set; }
 
-    public string GetColor()
-    {
-        if (Color == SpecieColor.Yellow) return "bg-yellow-200 border-yellow-500";
-        if (Color == SpecieColor.Green) return "bg-green-500 border-green-700";
-        if (Color == SpecieColor.Blue) return "bg-blue-200 border-blue-500";
-        if (Color == SpecieColor.Black) return "bg-gray-600 border-gray-900 text-white";
-        if (Color == SpecieColor.Red) return "bg-red-300 border-red-500";
-        if (Color == SpecieColor.White) return "bg-gray-50 border-gray-200";
-        if (Color == SpecieColor.Gray) return "bg-gray-300 border-gray-500";
-        return "bg-blue-100";
-    }
+    [Parameter]
+    public Ship Ship { get; set; }
+
+    [Parameter]
+    public EventCallback<Ship> OnShipClicked { get; set; }
+
 }
