--- a/src/Eclipse.Web/_Imports.razor
+++ b/src/Eclipse.Web/_Imports.razor
@@ -11,4 +11,5 @@
 @using Eclipse.Core
 @using Eclipse.Web.Components.Ships
 @using Eclipse.Web.Components.Dices
-@using Eclipse.Web.Shared.Components.Popovers
+@using Eclipse.Web.Shared.Components.OverlayPanel
+
